[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "async_agent"
version = "0.0.1"
authors = [{ name = "Alen Rubilar", email = "lclc.alen@gmail.com" }]
description = "An async runtime for language agents"
readme = "README.md"
requires-python = ">=3.7"
